Migrate from react to vite

--- a/ecommerce_website/frontend/src/App.css
+++ b/ecommerce_website/frontend/src/App.css
@@ -1,5 +1,6 @@
 :root{
     --primary-color: #3b444b;
+    --secondary-color:#fff;
     --large-fs: 3em;
     --medium-fs: 2em;
     --small-fs: 1em
