--- a/ecommerce_website/frontend/src/pages/UserAccount/UserProfile.css
+++ b/ecommerce_website/frontend/src/pages/UserAccount/UserProfile.css
@@ -20,15 +20,15 @@
     flex-wrap: wrap;
     width: 100%;
     justify-content: center;
-    align-items: center;
     margin: 0 0 40px 0;
 }
 
 .user-profile-header {
-    width: 80%;
-    padding: 30px 0;
+    width: calc(90%);
     font-weight: 800;
+    margin: 1em auto;
     font-size: 25px;
+    background-color: var(--secondary-color);
 }
 
 .user-profile-body-container {
@@ -44,8 +44,17 @@
     padding: 2em 3em;
 }
 
+.user-profile-side-body-subcontainer{
+    margin: 10em auto;
+}
+
 .user-profile-side-body-container {
     width: 30%;
+    padding: 1em;
+    margin: 0 0em;
+    text-align: center;
+    border: 1px solid black;
+    background-color: var(--secondary-color);
 }
 
 .user-information-container {
