--- a/ecommerce_website/frontend/src/pages/Cart/cartDetail.css
+++ b/ecommerce_website/frontend/src/pages/Cart/cartDetail.css
@@ -93,9 +93,9 @@
 }
 
 .cart-detail-container{
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .cart-detail-title{
