--- a/ecommerce_website/frontend/src/components/Product/product.css
+++ b/ecommerce_website/frontend/src/components/Product/product.css
@@ -3,9 +3,10 @@
 }
 
 .product-container {
-    width: min(100%, 1500px);
+    width: min(100%, 1800px);
     margin: 2em auto;
     padding: 3em;
+    background-color: var(--secondary-color);
 }
 
 .pagination {
@@ -15,10 +16,11 @@
 }
 
 .product-image {
-    width: 100%;
-    height: 300px;
+    width: 200%;
+    height: 400px;
     aspect-ratio: 3/2;
     object-fit: cover; 
+    border-radius: 15px;
 }
 
 
@@ -27,7 +29,7 @@
 }
 
 .pagination-num-active {
-    background-color: #3b444b;
+    background-color: var(--primary-color);
     margin: 10px 2px;
     border: 0;
     width: 30px;
