--- a/ecommerce_website/frontend/src/components/body/joinforfree.css
+++ b/ecommerce_website/frontend/src/components/body/joinforfree.css
@@ -1,12 +1,12 @@
 .join-for-free-container{
-    width: 100%;
+    width: min(100%, 1800px);
     margin: 3em auto;
     padding: 7em;
+    background-color: var(--primary-color);
 }
 
 
 .jff-header{
-    font-size: 7vw;
     width: min(90%, 500px);
     text-align: center;
     margin: 1em auto;
@@ -18,27 +18,24 @@
         text-align: center;
         margin: 1em auto;
         max-width: 70rem;
-        font-size: 3em
     }
 }
 
 .jff-subheader{
     margin: 1em auto 1em auto; 
     text-align: center;
-    width: min(90%, 700px);
-    font-size:2vw;
+    width: min(90%, 1700px);
 }
 
 .jff-button{
     display: block;
-    font-size:2vw;
     margin: 0em auto;
     padding: 1em;
     background-color: #fff;
-    color: #3b444b;
+    color: var(--primary-color);
 }
 
 .jff-button:hover{
-    color: #fff;
-    background-color: #3b444b;
+    color: var(--secondary-color);
+    background-color: var(--dark-color);
 }
