--- a/ecommerce_website/frontend/src/components/body/pcc.css
+++ b/ecommerce_website/frontend/src/components/body/pcc.css
@@ -1,5 +1,5 @@
 .pcc-container{
-    width: min(100%, 1500px);
+    width: min(100%, 1800px);
     margin: 1em auto;
-    background-color: #3b444b;
+    background-color: var(--primary-color);
 }
