--- a/ecommerce_website/frontend/src/components/Product/product.css
+++ b/ecommerce_website/frontend/src/components/Product/product.css
@@ -16,10 +16,9 @@
 }
 
 .product-image {
-    width: 200%;
-    height: 400px;
-    aspect-ratio: 3/2;
-    object-fit: cover; 
+    width: 120%;
+    aspect-ratio: 2/2;
+    object-fit: fill; 
     border-radius: 15px;
 }
 
