--- a/ecommerce_website/frontend/src/components/Navbar/navbar.css
+++ b/ecommerce_website/frontend/src/components/Navbar/navbar.css
@@ -65,6 +65,7 @@
     z-index: 10000;
     background-color: #000000;
     background-color: hsl(0 0% 100%/.9);
+	/* background-color: rgb(219 234 254);     */
     color: #000;
     height: 80px;
     border: 1px solid #f5f1f1;
@@ -191,7 +192,7 @@
 }
 
 .submenu-link:hover p {
-    font-weight: 1000;
+    font-weight: 700;
 }
 
 
