--- a/ecommerce_website/frontend/src/components/body/joinforfree.css
+++ b/ecommerce_website/frontend/src/components/body/joinforfree.css
@@ -2,7 +2,7 @@
     width: min(100%, 1800px);
     margin: 3em auto;
     padding: 7em;
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
 }
 
 
@@ -32,10 +32,10 @@
     margin: 0em auto;
     padding: 1em;
     background-color: #fff;
-    color: var(--primary-color);
+    color: #fff;
+    background-color: var(--dark-color);
 }
 
 .jff-button:hover{
-    color: var(--secondary-color);
-    background-color: var(--dark-color);
+    background-color: var(--secondary-color);
 }
