--- a/ecommerce_website/frontend/src/pages/Login/login.css
+++ b/ecommerce_website/frontend/src/pages/Login/login.css
@@ -6,7 +6,6 @@
 
 .body-login{
     height: 100vh;
-    background-color: var(--primary-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +17,6 @@
     border-radius: 5px;
     padding: 20px 35px;
     background-color: var(--secondary-color);
-    border: 1px solid #ccc
 }
 
 .user-details-login {
@@ -46,7 +44,7 @@
 
 .input-box-login input:focus,
 .input-box-login input:valid {
-    border-color: var(--primary-color);
+    /* border-color: var(--primary-color); */
 }
 
 .title-login{
@@ -68,16 +66,15 @@
     display: block;
     margin: 0 auto;
     height: 100%;
-    background-color: #fff;
-    color: #000;
+    color: #fff;
     outline: none;
     border: 1px solid #ccc;
 }
 
 .login-button input:hover{
-    background-color: #000;
+    background-color: #fff;
     opacity: 0.7;
-    color: #fff;
+    color: #000;
 }
 
 .login-sign-up{
