--- a/ecommerce_website/frontend/src/components/Navbar/navbar.css
+++ b/ecommerce_website/frontend/src/components/Navbar/navbar.css
@@ -68,7 +68,7 @@
 	/* background-color: rgb(219 234 254);     */
     color: #000;
     height: 80px;
-    border: 1px solid #f5f1f1;
+    /* border: 1px solid #f5f1f1; */
     border-radius: 10px;
     margin: 0 auto;
 }
