--- a/ecommerce_website/frontend/src/components/categories/categories.css
+++ b/ecommerce_website/frontend/src/components/categories/categories.css
@@ -103,19 +103,21 @@
 }
 
 .category-pill{
-    margin: 1em 0.5em;
+    margin: 0.3em 0.5em;
     padding: 1em;
     border-radius: 66.6px;
     border:1px solid #fff;
+    color: black;
     text-align: center;
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
+    background-color: aliceblue;
 }
 
 .category-pill:hover{
-    color:black;
-    background-color: white;
+    color:white;
+    background-color: black;
 }
 
 .pss-text-container{
